bk_ida/sjengida/g2/init_game
/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/init_game/src/utils.c:836:23: error: use of undeclared identifier 'unk_41E5A0'
qmemcpy( init_board, &unk_41E5A0, sizeof( init_board)); 
                      ^
1 error generated.
make: *** [/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/init_game/src/obj/utils.o] Error 1
